Edits to text components hang for clipboard access

XMLWordPrintable

    • b94
    • linux

        Steps to reproduce:
        1. Install Oracle VM VirtualBox to your Windows PC
        2. Create and set-up new Linux virtual machine, (e.g. Ubuntu, OEL, etc.) using VirtualBox
        3. Install Java to your Linux virtual machine, (e.g. jdk7u09)
        4. Install VNC to your Linux virtual machine
        5. Start VNC server on your Linux virtual machine
        6. Go to Windows and install VNC client, (ultra VNC, real VNC, etc.)
        7. Login from Windows to you Linux virtual machine using VNC
        8. Run ClipboardHanger test
        9. Insert a lot of text into the text area that appears (I copy and paste the source code)
        10. Select a few lines of code
        11. Press control+enter

        This triggers a number of inserts into the document under a write lock. Notice it takes a long time to return, but eventually does.

              Assignee:
              Dmitry Markov
              Reporter:
              Dmitry Markov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: