8015375: Edits to text components hang for clipboard access

Reviewed-by: art, anthony